Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

    [CHANGED]

    - No longer allows dirty files at release time

0.069     2014-07-29 14:17:19-04:00 America/New_York

    [CHANGED]

    - Bumped Test::ReportPrereqs dependency to 0.016 because I'm an idiot

0.068     2014-07-29 13:39:29-04:00 America/New_York

    [CHANGED]

    - Bumped Test::ReportPrereqs dependency to 0.015

0.067     2014-04-17 16:43:11-04:00 America/New_York

    [ADDED]

    - Added Git::CheckFor::CorrectBranch plugin

0.066     2014-03-28 17:05:19-04:00 America/New_York

    [CHANGED]

    - Switched back to MinimumPerl; MinimumPerlFast isn't quite stable
      enough yet for me to depend on it

0.065     2014-03-23 07:48:28-04:00 America/New_York

    [CHANGED]

    - set default_jobs = 9 for RunExtraTests plugin

0.064     2014-03-16 22:28:53+01:00 Europe/Paris

    [CHANGED]

    - Switched from MinimumPerl to MinimumPerlFast

0.063     2014-03-16 17:03:18+01:00 Europe/Paris

    [CHANGED]

    - Removed ununsed autodie and Moose::AutoBox

    - set default_jobs = 9 for MakeMaker plugin

0.062     2014-02-02 21:13:10-05:00 America/New_York

    [FIXED]

    - Fixed breakage from Config::MVP 2.200007

0.061     2014-01-15 19:39:55-05:00 America/New_York

    [CHANGED]

    - Actually, we need Pod::Elemental::PerlMunger 2.000001

0.060     2014-01-15 09:35:50-05:00 America/New_York

    [CHANGED]

    - Pod weaving no longer modifies code line numbers; Pod mixed with
      code is commented rather than replaced, but Pod after code is
      removed and replaced with generated Pod

0.059     2013-11-09 21:57:32 America/New_York

    [ADDED]

    - Adds PromptIfStale to check build tool versions before release

    [CHANGED]

    - Requires Pod::Elemental::Transformer::List 0.102000
      (bullet lists that wrap with leading whitespace)

    [REMOVED]

    - Removes unused Pod::Weaver::Plugin::Encoding (since we use
      the built-in SingleEncoding plugin)
