@@ -5,9 +5,9 @@ requires "Dist::Zilla::Plugin::CPANFile" => "0";
 requires "Dist::Zilla::Plugin::CheckChangesHasContent" => "0";
 requires "Dist::Zilla::Plugin::CheckMetaResources" => "0.001";
 requires "Dist::Zilla::Plugin::CheckPrereqsIndexed" => "0.002";
-requires "Dist::Zilla::Plugin::ContributorsFromGit" => "0.004";
 requires "Dist::Zilla::Plugin::CopyFilesFromBuild" => "0";
 requires "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch" => "0";
+requires "Dist::Zilla::Plugin::Git::Contributors" => "0.007";
 requires "Dist::Zilla::Plugin::Git::NextVersion" => "0";
 requires "Dist::Zilla::Plugin::GithubMeta" => "0.36";
 requires "Dist::Zilla::Plugin::InsertCopyright" => "0.001";
@@ -39,7 +39,7 @@ requires "Pod::Elemental::Transformer::List" => "0.102000";
 requires "Pod::Weaver" => "4";
 requires "Pod::Weaver::Config::Assembler" => "0";
 requires "Pod::Weaver::Plugin::WikiDoc" => "0";
-requires "Pod::Weaver::Section::Contributors" => "0.001";
+requires "Pod::Weaver::Section::Contributors" => "0.008";
 requires "Pod::Weaver::Section::Support" => "1.001";
 requires "Pod::Wordlist" => "1.10";
 requires "Test::Portability::Files" => "0.06";
