@@ -20,7 +20,7 @@ use Dist::Zilla::Plugin::CheckChangesHasContent ();
 use Dist::Zilla::Plugin::RunExtraTests          ();
 use Dist::Zilla::Plugin::CheckMetaResources 0.001  ();
 use Dist::Zilla::Plugin::CheckPrereqsIndexed 0.002 ();
-use Dist::Zilla::Plugin::ContributorsFromGit 0.004 ();
+use Dist::Zilla::Plugin::Git::Contributors 0.007 ();
 use Dist::Zilla::Plugin::CopyFilesFromBuild           ();
 use Dist::Zilla::Plugin::CPANFile                     ();
 use Dist::Zilla::Plugin::Git::NextVersion             ();
@@ -224,7 +224,7 @@ sub configure {
         (
             $self->no_git
             ? ()
-            : 'ContributorsFromGit'
+            : 'Git::Contributors'
         ),
 
         # gather and prune
@@ -445,7 +445,7 @@ following dist.ini:
   version_regexp = ^release-(.+)$
 
   ; collect contributors list
-  [ContributorsFromGit]
+  [Git::Contributors]
 
   ; choose files to include
   [Git::GatherDir]         ; everything from git ls-files
